--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Dananee/MyLibrary.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Dananee/MyLibrary/issues"
+  },
+  "homepage": "https://github.com/Dananee/MyLibrary#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.11.16"
+    "mongoose": "^5.11.15"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
